# online-trading

./: .coverage-contracts  .coveragerc-contracts  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  CLAUDE.md  CODEOWNERS  CODEOWNERS.example  CONTEXT.md  Makefile  PRD - Online Trading.md  PROJECT_PLAN.md  README.md  docker-compose.bff.yml  docker-compose.dev.yml  docker-compose.yml  docker_integration_test.py  fix-claude-vscode.md  integration_test_results.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject-contracts.toml  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: auto-approve.yml  cd.yml  ci.yml
app/bff/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  jest.integration.config.js  package.json  tsconfig.json
app/bff/src/: app.module.spec.ts  app.module.ts  main.ts
app/bff/src/config/: config.module.spec.ts  config.module.ts  configuration.spec.ts  configuration.ts
app/bff/src/engine-client/: engine-client.module.ts  engine-client.service.spec.ts  engine-client.service.ts
app/bff/src/health/: health.controller.spec.ts  health.controller.ts  health.module.spec.ts  health.module.ts
app/bff/src/market-data/: market-data.gateway.spec.ts  market-data.gateway.ts  market-data.module.ts
app/bff/src/router-client/: router-client.module.ts  router-client.service.spec.ts  router-client.service.ts
app/bff/src/trading/: trading.controller.spec.ts  trading.controller.ts  trading.gateway.spec.ts  trading.gateway.ts  trading.module.ts  trading.service.spec.ts  trading.service.ts
app/bff/test/integration/: engine-client-pubsub.spec.ts  market-data-trading.spec.ts  trading-rest-api.spec.ts
app/engine/: Dockerfile  __init__.py  bus.py  bus_refactored.py  config.py  config.yaml  main.py  models.py  requirements-dev.txt  requirements.txt  types.py
app/engine/adapters/: __init__.py  legacy_adapter.py
app/engine/adapters/db/: __init__.py  connection_pool.py  migrations.py  timescale.py  timescale_adapter.py
app/engine/adapters/redis/: __init__.py  redis_adapter.py
app/engine/adapters/router_client/: __init__.py  http_client.py
app/engine/backtest/: backtest_engine.py  data_loader.py  vector_engine.py
app/engine/core/: bounded_priority_queue.py  clock.py  config_manager.py  database.py  error_handling.py  event_bus_factory.py  event_processor.py  health.py  interfaces.py  lifecycle.py  memory_pool.py  metrics.py  observability.py  security.py  subscription_manager.py  tracing.py
app/engine/database/: __init__.py  connection.py  migrations.py  test_config.py  test_utils.py
app/engine/decision/: __init__.py  decision_engine.py  risk_manager.py
app/engine/features/: __init__.py  feature_service.py  indicators.py
app/engine/ingest/: __init__.py  binance_rest.py  binance_spot.py  binance_usdm.py  binance_ws.py  ingest_service.py
app/engine/monitoring/: __init__.py  endpoints.py  health.py  test_health.py
app/engine/news_funding_guards/: guards.py
app/engine/paper/: paper_broker.py
app/engine/plugins/: base_plugin.py  plugin_manager.py
app/engine/regime_vol/: __init__.py  regime_analyzer.py
app/engine/resilience/: thread_safe_circuit_breaker.py
app/engine/retest/: __init__.py  retest_analyzer.py
app/engine/services/: __init__.py  order_service.py  position_tracker.py
app/engine/smc/: __init__.py  pivot_detector.py  smc_service.py  zone_identifier.py
app/engine/tests/: TEST_SUMMARY.md  __init__.py  test_basic.py
app/engine/tests/fixtures/: db_fixtures.py
app/engine/tests/integration/: __init__.py  conftest.py  test_database_integration.py  test_error_handling_integration.py  test_event_bus_integration.py  test_observability_integration.py  test_runner.py  test_security_integration.py  test_timescale_integration.py
app/engine/tests/unit/: test_bounded_priority_queue.py  test_clock.py  test_config_manager.py  test_connection_pool.py  test_data_loader.py  test_database.py  test_database_pure.py  test_db_fixtures.py  test_error_handling.py  test_event_bus.py  (+21 more)
app/router/: Dockerfile  Makefile  go.mod  go.sum
app/ui/: .eslintrc.js  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/ui/tests/: README.md  fixtures.ts
contracts/: __init__.py  config.py  test_config.py
contracts/examples/: README.md  candles.v1.example.json  decision.v1.example.json  features.v1.example.json  funding_window.v1.example.json  news_window.v1.example.json  order_update.v1.example.json  regime.v1.example.json  signals_raw.v1.example.json  smc_events.v1.example.json  zones.v1.example.json
contracts/jsonschema/: candles.v1.schema.json  decision.v1.schema.json  features.v1.schema.json  funding_window.v1.schema.json  news_window.v1.schema.json  order_update.v1.schema.json  regime.v1.schema.json  signals_raw.v1.schema.json  smc_events.v1.schema.json  zones.v1.schema.json
db/migrations/: 000_migration_version.sql  001_candles.sql  002_indicators.sql  003_swings.sql  004_smc_events.sql  005_zones.sql  006_orders.sql  007_positions.sql  008_add_foreign_keys.sql
infra/grafana/dashboards/: system-metrics.json  trading-metrics.json
infra/postgres/init/: 01-init-timescaledb.sql  02-create-hypertables.sql
infra/prometheus/: prometheus.yml
infra/redis/: redis.conf
scripts/: codegen_contracts.py  create-draft-prs-simple.sh  create-draft-prs.sh  fix-router-branch-worktree.sh  fix-router-branch.sh  update_examples.py  validate_contracts.py
tests/: test_ci_cd_pipeline.py  test_docker_compose.py  test_grafana_dashboards.py  test_grafana_datasources.py  test_prometheus_config.py  test_redis_config.py  test_timescaledb_init.py
tests/contracts/: test_candles_schema.py  test_codegen.py  test_cross_language_serialization.py  test_features_schema.py  test_generated_models.py  test_jsonschema_validation.py  test_smc_events_schema.py  test_zones_schema.py
tests/ingest/: test_binance_close_flag_and_backfill.py
tests/router/: test_router_spot_bracket_e2e.md
(+155 files in other folders)
